Brought cache directory to ./

--- a/tilestache.cfg
+++ b/tilestache.cfg
@@ -1,7 +1,8 @@
 {
     "cache": {
         "name": "Disk",
-        "path": "/var/cache/tilestache-vectiles",
+        "path": "cache",
+        "umask": "0000",
         "dirs": "quadtile"
     },
     "layers": {
