Added skeletron-2x and highroad-2x layers

--- a/tilestache.cfg
+++ b/tilestache.cfg
@@ -36,6 +36,37 @@
                 }
             }
         },
+        "highroad-2x":
+        {
+            "provider":
+            {
+                "class": "TileStache.Goodies.VecTiles:Provider",
+                "kwargs":
+                {
+                    "simplify": 0.5,
+                    "dbinfo":
+                    {
+                        "host": "localhost",
+                        "port": 6432,
+                        "user": "gis",
+                        "password": "gis",
+                        "database": "gis"
+                    },
+                    "queries":
+                    [
+                        null, null, null, null, null,
+                        null, null, null, null,
+
+                        "queries/highroad-z10.pgsql",
+                        "queries/highroad-z11.pgsql",
+                        "queries/highroad-z12.pgsql",
+                        "queries/highroad-z13.pgsql",
+                        "queries/highroad-z14.pgsql",
+                        "queries/highroad-z15.pgsql"
+                    ]
+                }
+            }
+        },
         "skeletron":
         {
             "provider":
@@ -61,6 +92,38 @@
                         "SELECT way AS geometry, highway, name FROM streets_02_28_altogether WHERE zoomlevel=12",
                         "SELECT way AS geometry, highway, name FROM streets_02_28_altogether WHERE zoomlevel=13",
                         "SELECT way AS geometry, highway, name FROM streets_02_28_altogether WHERE zoomlevel=14",
+                        "queries/skeletron-z15.pgsql",
+                        "queries/skeletron-z16.pgsql"
+                    ]
+                }
+            }
+        },
+        "skeletron-2x":
+        {
+            "provider":
+            {
+                "class": "TileStache.Goodies.VecTiles:Provider",
+                "kwargs":
+                {
+                    "clip": false,
+                    "simplify": 0.5,
+                    "dbinfo":
+                    {
+                        "host": "localhost",
+                        "port": 6432,
+                        "user": "gis",
+                        "password": "gis",
+                        "database": "gis"
+                    },
+                    "queries":
+                    [
+                        null, null, null, null,
+                        null, null, null, null,
+                        null, null, null,
+
+                        "SELECT way AS geometry, highway, name FROM streets_skeletron WHERE zoomlevel=12",
+                        "SELECT way AS geometry, highway, name FROM streets_skeletron WHERE zoomlevel=13",
+                        "SELECT way AS geometry, highway, name FROM streets_skeletron WHERE zoomlevel=14",
                         "queries/skeletron-z15.pgsql",
                         "queries/skeletron-z16.pgsql"
                     ]
