Added unclipped buildings and green-areas layers

--- a/tilestache.cfg
+++ b/tilestache.cfg
@@ -6,6 +6,7 @@
         "dirs": "quadtile"
     },
     "layers": {
+
         "highroad":
         {
             "provider":
@@ -36,6 +37,7 @@
                 }
             }
         },
+
         "highroad-2x":
         {
             "provider":
@@ -67,6 +69,7 @@
                 }
             }
         },
+
         "skeletron":
         {
             "provider":
@@ -98,6 +101,7 @@
                 }
             }
         },
+
         "skeletron-2x":
         {
             "provider":
@@ -129,6 +133,74 @@
                     ]
                 }
             }
+        },
+
+        "buildings":
+        {
+            "provider":
+            {
+                "class": "TileStache.Goodies.VecTiles:Provider",
+                "kwargs":
+                {
+                    "clip": false,
+                    "dbinfo":
+                    {
+                        "host": "localhost",
+                        "port": 6432,
+                        "user": "gis",
+                        "password": "gis",
+                        "database": "gis"
+                    },
+                    "queries":
+                    [
+                        null, null, null, null,
+                        null, null, null, null,
+                        null, null, null, null,
+                        
+                        "SELECT way AS geometry FROM planet_osm_polygon WHERE building IS NOT null AND Area(way) > 1600 -- 1px at z12",
+                        "SELECT way AS geometry FROM planet_osm_polygon WHERE building IS NOT null AND Area(way) > 400  -- 1px at z13",
+                        "SELECT way AS geometry FROM planet_osm_polygon WHERE building IS NOT null AND Area(way) > 100  -- 1px at z14",
+                        "SELECT way AS geometry FROM planet_osm_polygon WHERE building IS NOT null AND Area(way) > 25   -- 1px at z15",
+            
+                        "SELECT way AS geometry FROM planet_osm_polygon WHERE building IS NOT null AND Area(way) > 0"
+                    ]
+                }
+            }
+        },
+
+        "green-areas":
+        {
+            "provider":
+            {
+                "class": "TileStache.Goodies.VecTiles:Provider",
+                "kwargs":
+                {
+                    "clip": false,
+                    "dbinfo":
+                    {
+                        "host": "localhost",
+                        "port": 6432,
+                        "user": "gis",
+                        "password": "gis",
+                        "database": "gis"
+                    },
+                    "queries":
+                    [
+                        null, null, null, null, null,
+                        null, null, null, null, null,
+                        
+                        "queries/green-areas-z10.pgsql",
+                        "queries/green-areas-z11.pgsql",
+                        "queries/green-areas-z12.pgsql",
+                        "queries/green-areas-z13.pgsql",
+                        "queries/green-areas-z14.pgsql",
+
+                        "queries/green-areas-z15.pgsql",
+                        "queries/green-areas-z16.pgsql"
+                    ]
+                }
+            }
         }
+
     }
 }
