--- a/tilestache.cfg
+++ b/tilestache.cfg
@@ -92,9 +92,9 @@
                         null, null, null, null,
                         null, null, null, null,
 
-                        "SELECT way AS geometry, highway, name FROM streets_02_28_altogether WHERE zoomlevel=12",
-                        "SELECT way AS geometry, highway, name FROM streets_02_28_altogether WHERE zoomlevel=13",
-                        "SELECT way AS geometry, highway, name FROM streets_02_28_altogether WHERE zoomlevel=14",
+                        "SELECT way AS geometry, highway, name FROM streets_skeletron WHERE zoomlevel=12",
+                        "SELECT way AS geometry, highway, name FROM streets_skeletron WHERE zoomlevel=13",
+                        "SELECT way AS geometry, highway, name FROM streets_skeletron WHERE zoomlevel=14",
                         "queries/skeletron-z15.pgsql",
                         "queries/skeletron-z16.pgsql"
                     ]
