Renamed green-areas to land-usages and mirrored imposm's definition

--- a/tilestache.cfg
+++ b/tilestache.cfg
@@ -168,7 +168,7 @@
             }
         },
 
-        "green-areas":
+        "land-usages":
         {
             "provider":
             {
@@ -189,14 +189,14 @@
                         null, null, null, null, null,
                         null, null, null, null, null,
                         
-                        "queries/green-areas-z10.pgsql",
-                        "queries/green-areas-z11.pgsql",
-                        "queries/green-areas-z12.pgsql",
-                        "queries/green-areas-z13.pgsql",
-                        "queries/green-areas-z14.pgsql",
+                        "queries/land-usages-z10.pgsql",
+                        "queries/land-usages-z11.pgsql",
+                        "queries/land-usages-z12.pgsql",
+                        "queries/land-usages-z13.pgsql",
+                        "queries/land-usages-z14.pgsql",
 
-                        "queries/green-areas-z15.pgsql",
-                        "queries/green-areas-z16.pgsql"
+                        "queries/land-usages-z15.pgsql",
+                        "queries/land-usages-z16.pgsql"
                     ]
                 }
             }
