Added unclipped water-areas layer

--- a/tilestache.cfg
+++ b/tilestache.cfg
@@ -200,6 +200,40 @@
                     ]
                 }
             }
+        },
+
+        "water-areas":
+        {
+            "provider":
+            {
+                "class": "TileStache.Goodies.VecTiles:Provider",
+                "kwargs":
+                {
+                    "clip": false,
+                    "dbinfo":
+                    {
+                        "host": "localhost",
+                        "port": 6432,
+                        "user": "gis",
+                        "password": "gis",
+                        "database": "gis"
+                    },
+                    "queries":
+                    [
+                        null, null, null, null, null,
+                        null, null, null, null, null,
+                        
+                        "queries/water-areas-z10.pgsql",
+                        "queries/water-areas-z11.pgsql",
+                        "queries/water-areas-z12.pgsql",
+                        "queries/water-areas-z13.pgsql",
+                        "queries/water-areas-z14.pgsql",
+
+                        "queries/water-areas-z15.pgsql",
+                        "queries/water-areas-z16.pgsql"
+                    ]
+                }
+            }
         }
 
     }
