Added POI layer to vector tiles, based on OSM.org Mapnik style:
	layer-amenity-points.xml.inc.txt
	layer-amenity-stations.xml.inc.txt
	layer-amenity-symbols.xml.inc.txt

--- a/tilestache.cfg
+++ b/tilestache.cfg
@@ -168,6 +168,46 @@
             }
         },
 
+        "pois":
+        {
+            "provider":
+            {
+                "class": "TileStache.Goodies.VecTiles:Provider",
+                "kwargs":
+                {
+                    "clip": false,
+                    "dbinfo":
+                    {
+                        "host": "localhost",
+                        "port": 6432,
+                        "user": "gis",
+                        "password": "gis",
+                        "database": "gis"
+                    },
+                    "queries":
+                    [
+                        null, null, null,
+                        null, null, null,
+                        null, null, null,
+
+                        "queries/pois-z9.pgsql",
+                        "queries/pois-z10.pgsql",
+                        "queries/pois-z11.pgsql",
+
+                        "queries/pois-z12.pgsql",
+                        "queries/pois-z13.pgsql",
+                        "queries/pois-z14.pgsql",
+
+                        "queries/pois-z15.pgsql",
+                        "queries/pois-z16.pgsql",
+                        "queries/pois-z17.pgsql",
+
+                        "queries/pois-z18.pgsql"
+                    ]
+                }
+            }
+        },
+
         "land-usages":
         {
             "provider":
