Switched magic column name from "geometry" to "__geometry__"

--- a/tilestache.cfg
+++ b/tilestache.cfg
@@ -56,8 +56,8 @@
                     },
                     "queries":
                     [
+                              null, null, null, null,
                         null, null, null, null, null,
-                        null, null, null, null,
 
                         "queries/highroad-z10.pgsql",
                         "queries/highroad-z11.pgsql",
@@ -92,9 +92,9 @@
                         null, null, null, null,
                         null, null, null, null,
 
-                        "SELECT way AS geometry, highway, name FROM streets_skeletron WHERE zoomlevel=12",
-                        "SELECT way AS geometry, highway, name FROM streets_skeletron WHERE zoomlevel=13",
-                        "SELECT way AS geometry, highway, name FROM streets_skeletron WHERE zoomlevel=14",
+                        "SELECT way AS __geometry__, highway, name FROM streets_skeletron WHERE zoomlevel=12",
+                        "SELECT way AS __geometry__, highway, name FROM streets_skeletron WHERE zoomlevel=13",
+                        "SELECT way AS __geometry__, highway, name FROM streets_skeletron WHERE zoomlevel=14",
                         "queries/skeletron-z15.pgsql",
                         "queries/skeletron-z16.pgsql"
                     ]
@@ -121,13 +121,13 @@
                     },
                     "queries":
                     [
+                              null, null, null,
                         null, null, null, null,
                         null, null, null, null,
-                        null, null, null,
 
-                        "SELECT way AS geometry, highway, name FROM streets_skeletron WHERE zoomlevel=12",
-                        "SELECT way AS geometry, highway, name FROM streets_skeletron WHERE zoomlevel=13",
-                        "SELECT way AS geometry, highway, name FROM streets_skeletron WHERE zoomlevel=14",
+                        "SELECT way AS __geometry__, highway, name FROM streets_skeletron WHERE zoomlevel=12",
+                        "SELECT way AS __geometry__, highway, name FROM streets_skeletron WHERE zoomlevel=13",
+                        "SELECT way AS __geometry__, highway, name FROM streets_skeletron WHERE zoomlevel=14",
                         "queries/skeletron-z15.pgsql",
                         "queries/skeletron-z16.pgsql"
                     ]
@@ -157,12 +157,12 @@
                         null, null, null, null,
                         null, null, null, null,
                         
-                        "SELECT way AS geometry FROM planet_osm_polygon WHERE building IS NOT null AND Area(way) > 1600 -- 1px at z12",
-                        "SELECT way AS geometry FROM planet_osm_polygon WHERE building IS NOT null AND Area(way) > 400  -- 1px at z13",
-                        "SELECT way AS geometry FROM planet_osm_polygon WHERE building IS NOT null AND Area(way) > 100  -- 1px at z14",
-                        "SELECT way AS geometry FROM planet_osm_polygon WHERE building IS NOT null AND Area(way) > 25   -- 1px at z15",
+                        "SELECT way AS __geometry__ FROM planet_osm_polygon WHERE building IS NOT null AND Area(way) > 1600 -- 1px at z12",
+                        "SELECT way AS __geometry__ FROM planet_osm_polygon WHERE building IS NOT null AND Area(way) > 400  -- 1px at z13",
+                        "SELECT way AS __geometry__ FROM planet_osm_polygon WHERE building IS NOT null AND Area(way) > 100  -- 1px at z14",
+                        "SELECT way AS __geometry__ FROM planet_osm_polygon WHERE building IS NOT null AND Area(way) > 25   -- 1px at z15",
             
-                        "SELECT way AS geometry FROM planet_osm_polygon WHERE building IS NOT null AND Area(way) > 0"
+                        "SELECT way AS __geometry__ FROM planet_osm_polygon WHERE building IS NOT null AND Area(way) > 0"
                     ]
                 }
             }
