Added TopoJSON and GeoJSON extensions to gzip list in Disk cache

--- a/tilestache.cfg
+++ b/tilestache.cfg
@@ -3,7 +3,8 @@
         "name": "Disk",
         "path": "cache",
         "umask": "0000",
-        "dirs": "quadtile"
+        "dirs": "quadtile",
+        "gzip": ["txt", "text", "json", "xml", "topojson", "geojson"]
     },
     "layers": {
 
