Added "all" layer for use with TileStache 1.49.7 VecTiles MultiProvider

--- a/tilestache.cfg
+++ b/tilestache.cfg
@@ -8,6 +8,18 @@
     },
     "layers": {
 
+        "all":
+        {
+            "provider":
+            {
+                "class": "TileStache.Goodies.VecTiles:MultiProvider",
+                "kwargs":
+                {
+                    "names": ["water-areas", "land-usages", "buildings", "skeletron", "highroad", "pois"]
+                }
+            }
+        },
+
         "highroad":
         {
             "provider":
