Updated configuration to reflect new database connection info on Benzene

--- a/tilestache.cfg
+++ b/tilestache.cfg
@@ -31,9 +31,9 @@
                     {
                         "host": "localhost",
                         "port": 6432,
-                        "user": "gis",
-                        "password": "gis",
-                        "database": "gis"
+                        "user": "osm2pgsql",
+                        "password": "osm2pgsqlpassword",
+                        "database": "osm2pgsql"
                     },
                     "queries":
                     [
@@ -63,9 +63,9 @@
                     {
                         "host": "localhost",
                         "port": 6432,
-                        "user": "gis",
-                        "password": "gis",
-                        "database": "gis"
+                        "user": "osm2pgsql",
+                        "password": "osm2pgsqlpassword",
+                        "database": "osm2pgsql"
                     },
                     "queries":
                     [
@@ -95,9 +95,9 @@
                     {
                         "host": "localhost",
                         "port": 6432,
-                        "user": "gis",
-                        "password": "gis",
-                        "database": "gis"
+                        "user": "osm2pgsql",
+                        "password": "osm2pgsqlpassword",
+                        "database": "osm2pgsql"
                     },
                     "queries":
                     [
@@ -128,9 +128,9 @@
                     {
                         "host": "localhost",
                         "port": 6432,
-                        "user": "gis",
-                        "password": "gis",
-                        "database": "gis"
+                        "user": "osm2pgsql",
+                        "password": "osm2pgsqlpassword",
+                        "database": "osm2pgsql"
                     },
                     "queries":
                     [
@@ -160,9 +160,9 @@
                     {
                         "host": "localhost",
                         "port": 6432,
-                        "user": "gis",
-                        "password": "gis",
-                        "database": "gis"
+                        "user": "osm2pgsql",
+                        "password": "osm2pgsqlpassword",
+                        "database": "osm2pgsql"
                     },
                     "queries":
                     [
@@ -193,9 +193,9 @@
                     {
                         "host": "localhost",
                         "port": 6432,
-                        "user": "gis",
-                        "password": "gis",
-                        "database": "gis"
+                        "user": "osm2pgsql",
+                        "password": "osm2pgsqlpassword",
+                        "database": "osm2pgsql"
                     },
                     "queries":
                     [
@@ -233,9 +233,9 @@
                     {
                         "host": "localhost",
                         "port": 6432,
-                        "user": "gis",
-                        "password": "gis",
-                        "database": "gis"
+                        "user": "osm2pgsql",
+                        "password": "osm2pgsqlpassword",
+                        "database": "osm2pgsql"
                     },
                     "queries":
                     [
@@ -266,9 +266,9 @@
                     {
                         "host": "localhost",
                         "port": 6432,
-                        "user": "gis",
-                        "password": "gis",
-                        "database": "gis"
+                        "user": "osm2pgsql",
+                        "password": "osm2pgsqlpassword",
+                        "database": "osm2pgsql"
                     },
                     "queries":
                     [
