Added Natural Earth land usage data for low zooms, and a source column to output data

--- a/tilestache.cfg
+++ b/tilestache.cfg
@@ -228,7 +228,6 @@
                 "class": "TileStache.Goodies.VecTiles:Provider",
                 "kwargs":
                 {
-                    "clip": false,
                     "dbinfo":
                     {
                         "host": "localhost",
@@ -239,8 +238,17 @@
                     },
                     "queries":
                     [
-                        null, null, null, null, null,
-                        null, null, null, null, null,
+                        null,
+                        null,
+                        null,
+                        null,
+                        "queries/land-usages-z4.pgsql",
+
+                        "queries/land-usages-z4.pgsql",
+                        "queries/land-usages-z6.pgsql",
+                        "queries/land-usages-z6.pgsql",
+                        "queries/land-usages-z6.pgsql",
+                        "queries/land-usages-z9.pgsql",
                         
                         "queries/land-usages-z10.pgsql",
                         "queries/land-usages-z11.pgsql",
